# PyPropagate

./: .dockerignore  .gitignore  .gitmodules  .latex.yml  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  cmake.command  cmake_mac.command  setup.py
.github/workflows/: build-image.yaml
Notebooks/: 2. Basic Introduction to numpy.ipynb  3. Basic Introduction to sympy.ipynb  4. Settings module.ipynb  5. Simulating a simple Waveguide.ipynb  6. CurvedWaveguide.ipynb  CurvedWaveguide.ipynb  Gaussian.ipynb  Path Test.ipynb  Waveguide.ipynb  ZonePlate.ipynb
Notebooks/.ipynb_checkpoints/: 1. Basic Introduction to Python-checkpoint.ipynb  2. Basic Introduction to numpy-checkpoint.ipynb  3. Basic Introduction to sympy-checkpoint.ipynb  4. Settings module-checkpoint.ipynb  5. Simulating a simple Waveguide-checkpoint.ipynb  6. CurvedWaveguide-checkpoint.ipynb  7. Sweep the curvature-checkpoint.ipynb  Analytical-checkpoint.ipynb  CurvedWaveguide-checkpoint.ipynb  Path Test-checkpoint.ipynb  Waveguide-Copy1-checkpoint.ipynb  Waveguide-checkpoint.ipynb  Waveguide_Gradient_MoveTest-checkpoint.ipynb  ZonePlate-checkpoint.ipynb
Notebooks/JS/: ZonePlate-Copy1.ipynb
cmake/: FindGMP.cmake
libs/lars/: .gitmodules  CMakeLists.txt  README.md  index_tuple.h  iterators.h  ndarray.h  parallel.h  timeit.h
libs/lars/include/lars/: hashers.h  math.h  no_content.h  parallel.h  path.h  random.h  rectangle.h  set_operations.h  shared_object.h  stream.h  timeit.h
matlab/: FiniteDifference1D.m  FiniteDifference2DStep1.m  FiniteDifference2DStep2.m  Tridiagonal.m  Waveguide1D.m  Waveguide2D.m
notebooks/: Waveguide.ipynb
notebooks/Examples/: Minimal Waveguide.ipynb  Split Waveguide.ipynb  Zoneplate.ipynb
notebooks/Examples/.ipynb_checkpoints/: Minimal Waveguide-checkpoint.ipynb
notebooks/Publication/: Gaussian.ipynb  PropagationErrors.ipynb  Propagator_Comparison.ipynb  Waveguide.ipynb  analytical_waveguides.py  pypropagate_simulations.ipynb
notebooks/Suplemental/: Gaussian.ipynb
publication/: main.tex  references.bib
publication/analytical/: gaussian.tex  waveguide.tex
publication/implementation/: implementation.tex
publication/manual/: manual.tex
publication/propagators/: discretization.tex  finite_differences.tex  fresnel_propagator.tex  grid.tex
publication/theory/: fresnel_diffraction.tex  paraxial_wave_equation.tex
pypropagate/: __init__.py  animation.py  categorized_dictionary.py  colormaps.py  coordinate_ndarray.py  hankel.py  phase_gradient.py  plot.py  presets.py  settings.py  solver.py  units.py
pypropagate/presets/: __init__.py  boundaries.py  medium.py  settings.py  time.py
pypropagate/progressbar/: LICENSE  __init__.py  common.py  terminal_bar.py
pypropagate/propagators/: __init__.py  cylindrically_symmetric_fresnel.py  finitedifferences.py  fresnel.py  pde_propagator.py  propagator.py  radially_symmetric_fresnel.py  time_domain_propagator.py
pypropagate/tests/: analytical_tests.py  test_waveguide.py
pysource/: __init__.py  animation.py  categorized_dictionary.py  compile_sympy.py  coordinate_ndarray.py  create_data.py  plot.py  presets.py  render.py  settings.py  solver.py  timeout.py  units.py
pysource/propagators/: __init__.py  finitedifferences.py  fresnel.py  propagator.py
source/: algebra.h  crank_nicolson.cpp  crank_nicolson.h  finite_difference.cpp  finite_difference.h  main.cpp  python.cpp  ring_derivative.h
